code font and body font and color are the reason behind the heroku issues, commented out to test

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,15 +7,15 @@ html {
  body {
     margin: 0;
     /* background: #151616; */
-    font-family: roboto;
+    /* font-family: roboto; */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
   
-  code {
+  /* code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
-  }
+  } */
 
   :root {
     --bg: #17a0b0;
